fix: remove horizontal overflow in references section on small devices

--- a/src/app/features/references/reference-card/reference-card.css
+++ b/src/app/features/references/reference-card/reference-card.css
@@ -109,8 +109,10 @@
 
 @media (max-width: 415px) {
   .card-content {
-    width: 300px;
+    width: 260px;
     font-size: 14px;
+    padding: 28px;
+    justify-content: space-around;
   }
 
   .profile-wrapper {
